--- a/src/app/client-list/client-list.component.html
+++ b/src/app/client-list/client-list.component.html
@@ -1,16 +1,27 @@
-
 <div class="container-fluid">
-  <div class="row justify-content-center align-items-center">
-    <div class="col-lg-4 col-md-6 col-sm-8 d-flex align-items-center m-4">
-      <img src="../../assets/android-chrome-192x192.png" alt="logo" style="width: 30px;">
-      <h1 class="text-center px-2 mb-6"> Client List</h1>
-      <div class="text-end" routerLink="create">
-        <button class="btn btn-primary">
-           Create Client
-        </button>
+  <nav class="navbar">
+    <div class="row justify-content-center align-items-center">
+      <div class="d-flex align-items-center m-4">
+        <img src="../../assets/android-chrome-192x192.png" alt="logo" style="width: 30px;">
+        <h1 class="text-center px-2"> Client List</h1>
       </div>
     </div>
-  </div>
+    <div class="text-end" routerLink="create">
+      <button class="btn btn-primary">
+        Create Client
+      </button>
+    </div>
+  </nav>
+</div>
+<div class="text-end">
+  <form class="d-flex justify-content-end col-lg-4 col-md-6 col-sm-8 m-3" role="search">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-primary" type="submit">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+          </svg>
+      </button>
+  </form>
 </div>
 <div class="container">
   <div class="row">
@@ -24,6 +35,7 @@
             <th>Cel</th>
             <th>CPF</th>
             <th>Registro do Usuário</th>
+            <th>Action</th>
           </tr>
         </thead>
         <tbody>
@@ -35,25 +47,25 @@
             <td>{{ client.cel }}</td>
             <td>{{ client.cpf }}</td>
             <td>{{ client.registryUser }}</td>
+            <td class="text-end">
+              <div class="btn-group">
+                <button class="btn btn-primary" [routerLink]="[client.id, 'edit']">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                  </svg>
+                </button>
+                <button class="btn btn-danger" (click)="deleteClient(client)">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                    <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
+                  </svg>
+                </button>
+              </div>
+            </td>
           </tr>
-        }
+          }
         </tbody>
       </table>
-      <div>
-        <button type="button" class="btn btn-primary btn-sm"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-double-left" viewBox="0 0 16 16">
-          <path fill-rule="evenodd" d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0"/>
-          <path fill-rule="evenodd" d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0"/>
-        </svg></button>
-        
-        <button type="button" class="btn btn-primary btn-sm"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-double-right" viewBox="0 0 16 16">
-          <path fill-rule="evenodd" d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708"/>
-          <path fill-rule="evenodd" d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708"/>
-        </svg></button>
-      </div>
-      
     </div>
   </div>
 </div>
-
-
-
